modele Membre et Equipe mis à jour avec certaines images pour l'esthétique des menu

--- a/ApplicationC/FormHackathon.resx
+++ b/ApplicationC/FormHackathon.resx
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!--
-    Microsoft ResX Schema 
+    Microsoft ResX Schema
 
     Version 2.0
 
@@ -48,7 +48,7 @@
     value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
-    
+
     mimetype: application/x-microsoft.net.object.soap.base64
     value   : The object must be serialized with
             : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
@@ -120,6 +120,51 @@
   <metadata name="contextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>419, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="VoirEquipeToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAOdSURBVFhH7dXba9tlHMfxbyNMVNzNhs7hnSuFijIn64Vs
+        7U5qZd2owiBzjh2auVNDhlt1q651a7fZxmUHVtJR1IbRsmzt2rTpaa3uPBQFEfwLBBHxwpCJFwr9+f4s
+        T0vadbsQG3D0Cy+SPL/n9/1+n+f5JbGZmIn/fewI7zhtBfak+5j7iI3E0tFk9Mfi3cUvuKHcRstwSzrx
+        bcKLXY3d2XRs02aG8jJXchRNQ03p+DdxT9puto3ua9n3mb1oT7jL0x+RgUg6djvm3XULN2JeXbzuh6It
+        RYVuyoOj7GDZSn+jv3RKx+/jlHPGX9ow0PBn841mb9w1XGn2wolwury2/B1KPPhIattrU5H+iMdKJhp0
+        hpzLzrAzgi9xxbnqXr+CxpkbToZHt57YetaescdduXuj6lxVqr6n3qtPZulDPwacQQw5l51hZyTL2Jiu
+        6x7lIHdlS+X3BRsKClzJiRH8PJiq7qz2qrucbiTQg14k0Yd+DGDQGZqCxjVHNF/3Khf5Q62hVMneEj8l
+        Jx5JRbQiFWoPeaE4LuAiOnEJXehGD3qdJPrQP4nGRNc1T/ckoBwdOB/ygq3B0TU1a5rsWXvMlTdbf3J9
+        KtAa8ALn0IZ2nEccF9GBS+hCNxLoQe8kGhNd1zzd0wnlUC7l/gLRgFdeU/7d3FVz8zMd+C1lAfNsF4LY
+        g/dQhf34EDX4GIdRjyM4imNZ9FnjdTiEWnwE5diL3diMt1CKIvuJH/A5bAENbGOgEiFMLq5ESqjCKvIJ
+        GhHGp47eSwPUjBpRs2r8AyhvBfx4AwvtZ3uKymazMjswuYH3cQBagVauVWUXV9EITuCko/ca0zU1ont0
+        v/Ip/wasQKFd50u5kOK+uydg62hAW/MudmLsGLRt6r4aBzHWiFanRrRiFT2NM47ea0wNaNe0k9uh4q/Y
+        X/YcrRprnxBlNLCOCW9jI7ZAz4RuzH4u1JASqikdjQqokIpG0YwmaBd0XDpCnbtyv2S/2DyyW9bTPx5L
+        rAO/21IaKUYJlmE5VmAVXsVrzusoxWqsxXEbtbMUETWj3dHxqXGdd6HdYssXUclt+b3xKJ7GvH8jL5L3
+        x/jq9XzoyLTyYrZ8AQeTyT194Wv03bFTrrieFR3hIvvV5vNkTbnl/3H4DtOAzlzF38Tz9rXNtsVceiQz
+        Y5rDV0UD+qott78tn8cxczS5C99GX9pett/4y63g4/3/dqct8vkpm80Pa662fCYesjD7B/aU4RXQIXGt
+        AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="modifierToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAOdSURBVFhH7dXba9tlHMfxbyNMVNzNhs7hnSuFijIn64Vs
+        7U5qZd2owiBzjh2auVNDhlt1q651a7fZxmUHVtJR1IbRsmzt2rTpaa3uPBQFEfwLBBHxwpCJFwr9+f4s
+        T0vadbsQG3D0Cy+SPL/n9/1+n+f5JbGZmIn/fewI7zhtBfak+5j7iI3E0tFk9Mfi3cUvuKHcRstwSzrx
+        bcKLXY3d2XRs02aG8jJXchRNQ03p+DdxT9puto3ua9n3mb1oT7jL0x+RgUg6djvm3XULN2JeXbzuh6It
+        RYVuyoOj7GDZSn+jv3RKx+/jlHPGX9ow0PBn841mb9w1XGn2wolwury2/B1KPPhIattrU5H+iMdKJhp0
+        hpzLzrAzgi9xxbnqXr+CxpkbToZHt57YetaescdduXuj6lxVqr6n3qtPZulDPwacQQw5l51hZyTL2Jiu
+        6x7lIHdlS+X3BRsKClzJiRH8PJiq7qz2qrucbiTQg14k0Yd+DGDQGZqCxjVHNF/3Khf5Q62hVMneEj8l
+        Jx5JRbQiFWoPeaE4LuAiOnEJXehGD3qdJPrQP4nGRNc1T/ckoBwdOB/ygq3B0TU1a5rsWXvMlTdbf3J9
+        KtAa8ALn0IZ2nEccF9GBS+hCNxLoQe8kGhNd1zzd0wnlUC7l/gLRgFdeU/7d3FVz8zMd+C1lAfNsF4LY
+        g/dQhf34EDX4GIdRjyM4imNZ9FnjdTiEWnwE5diL3diMt1CKIvuJH/A5bAENbGOgEiFMLq5ESqjCKvIJ
+        GhHGp47eSwPUjBpRs2r8AyhvBfx4AwvtZ3uKymazMjswuYH3cQBagVauVWUXV9EITuCko/ca0zU1ont0
+        v/Ip/wasQKFd50u5kOK+uydg62hAW/MudmLsGLRt6r4aBzHWiFanRrRiFT2NM47ea0wNaNe0k9uh4q/Y
+        X/YcrRprnxBlNLCOCW9jI7ZAz4RuzH4u1JASqikdjQqokIpG0YwmaBd0XDpCnbtyv2S/2DyyW9bTPx5L
+        rAO/21IaKUYJlmE5VmAVXsVrzusoxWqsxXEbtbMUETWj3dHxqXGdd6HdYssXUclt+b3xKJ7GvH8jL5L3
+        x/jq9XzoyLTyYrZ8AQeTyT194Wv03bFTrrieFR3hIvvV5vNkTbnl/3H4DtOAzlzF38Tz9rXNtsVceiQz
+        Y5rDV0UD+qott78tn8cxczS5C99GX9pett/4y63g4/3/dqct8vkpm80Pa662fCYesjD7B/aU4RXQIXGt
+        AAAAAElFTkSuQmCC
+</value>
+  </data>
   <metadata name="BSHackathon.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
