--- a/ApplicationC/View/FormHackathon.resx
+++ b/ApplicationC/View/FormHackathon.resx
@@ -169,4 +169,7 @@
   <metadata name="BSEquipe.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>175, 18</value>
   </metadata>
+  <metadata name="contextMenuStripEquipe.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>506, 22</value>
+  </metadata>
 </root>
