lot 2.6 terminé, revoir certaines parties du lot 2.6 comme la barre de recherche ou le visuel du corps du mail. revoir aussi les équipes et membre

--- a/ApplicationC/View/FormParamètre.resx
+++ b/ApplicationC/View/FormParamètre.resx
@@ -120,4 +120,104 @@
   <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="sécuritéSuppléToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAgAAAAIACAYAAAD0eNT6AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        cQAAEnEB89x6jgAAFctJREFUeF7t3VuotWtZBmBxX5ml6MkyycLyqEgXkpqFCNoGclcGCkp2YKaGocmK
+        KOmgg0SKMjE3B4oageVBgW2lkkTbqXQQpgZWpiTJklq6rFha9zfGc1S/uXveOd93vNcFz+n4nvnd7/z+
+        +///Mce8EwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AADAIzJvNu3z65lXZ16aeUnm+ZnHZx6UuXPm0t3onph95tId38PH9/LxPf3jmZ/N/ELm+J4/vvdvdE9m
+        nddlXpE59r8l86zMIzP3zXDhnvrfXKnc809n3pt5eeZJmftkLkp9qWyqjsElOf4wfHLm+J49vnc/XV/q
+        RcvX+a+Zt2WOgvMdmbtluCAKwDVLBp/J/FXmRZmbMsurL41N1TFY3QMyL868O/OZ+tK2lvvwycxvZ34o
+        c88Mi1MAJpI87sj8fuZpmbtmllRfDpuqY7Ci42+4T8/8QeaO+nK4gdyfT2Rek3l4hkUpAJNKNv+QeUHm
+        K46gVlJfApuqY7CSu2eemflAfQl8EXLf3pH5/gyLUQAml4w+knlu5i5HYCuo1dlUHYMVHN9Txxt0P1qr
+        82XIffyzzPEGQhahACwiWR1vPlrim6tWZlN1DGZ3c+YvamWa5J5+NvOGzP0zTE4BWEjyOt4wePy/21cf
+        4c2q1mVTdQxmde/M8T3kjX0D5f5+PHP8SCETUwAWlNzen/m2U4ITqjXZVB2DGT004//5r1Du91syX3vc
+        fOajACwq2f1H5niT4HRqRTZVx2A2x5v8PlUrcoVy3z+QmfYvLDtTABaXDI9PH5vqDYK1GpuqYzCL43vj
+        tbUa1yQZ3J554hEI81AALkByPD6cY5ofF6y12FQdgxncI/ObtRbXLFkcn3Py7CMY5qAAXIhk+fbM15xS
+        vWa1EpuqY3Ddjjf7/WmtxCSSyfFTAj91BMT1UwAuSPJ8Z+YrT8leo1qHTdUxuE7Hx9S+vdZhQsnn+Ohz
+        rpkCcGGS6e9krvVjhGsVNlXH4Loc/+f/W7UKk0pGx78E/PARGNdHAbhAyfW153ivR63BpuoYXBdv+FtE
+        svqvzPecUuNaKAAXKtn+2Dniq1crsKk6BtfhebUCi0hmxy8V+oZTelw5BeBCJdvjcwIedkr5itUKbKqO
+        wVX71szttQILSW5/mTl+IRNXTAG4YMn3g5nj3dBXqi7PpuoYXKV7Zf6uLs+Ckt8vnZLkSikAFy4ZHx8U
+        dKXq0myqjsFVek1dmkUlw+NNgY89pcmVUQAuXDI+foHQlf4Wwbo0m6pjcFUenvGLfS5Acjx+x8nx4U1c
+        EQVgA8n5bzJX9qOBdVk2VcfgKhw/8veeuiwXIHn6kKArpABsIlk/7xz5eHVJNlXH4Co8vy7JhUimn8o8
+        8JQuwykAm0jWH80cn5A2XF2STdUxGO34p+KP1CW5IMn1FaeEGU4B2Ejyfs459rHqcmyqjsFoz63LcWGS
+        7aczN51SZigFYCPJ+x8zdzslP1Bdjk3VMRjpOMMfqstxgZLvy05JM5QCsJlk/rRz9OPUpdhUHYORnl6X
+        4kIl49syV/4ZJrtRADaTzH/vHP04dSk2VcdgpD+sS3HBkvOzznEzigKwmWR+fC7AA07pD1KXYlN1DEY5
+        /m/4jroUFyw5//EpcYZRADaU3H/yHP8YdRk2VcdglFvqMly4ZH18OuCDTqkzhAKwoeR+/PKNYeoybKqO
+        wSh/XZdhA8n7RefYGUEB2FByvyNzn9MJGKAuw6bqGIxw34yP/d1I8n7rKXmGUAA2leyfeD4C/eoSbKqO
+        wQhPqUuwiWR+/DTA8B9d3pUCsKlk/8vnI9CvLsGm6hiM8Kt1CTaS3B91jp9uCsCmkv17zkegX12CTdUx
+        GOG9dQk2ktxvOcdPNwVgU8n++KUbdz6dgmZ1CTZVx6DbcVZvr0uwkeT++tMJoJ0CsLHkP+S3btXLs6k6
+        Bt0eVC/PZpL9u85HgG4KwMaS/+POx6BXvTybqmPQ7bvr5dlMsr/1fATopgBsLPk/93wMetXLs6k6Bt38
+        7v+NJf/7nY8BnRSAjSX/nzkfg1718myqjkG3l9TLs6Hk/83nY0AnBWBjyf+l52PQq16eTdUx6Payenk2
+        lPxvPh8DOikAG0v+rzwfg1718myqjkG3V9XLs6Hk/5jzMaCTArCx5P/G8zHoVS/PpuoYdHtTvTwbSv5P
+        OB8DmFyd2ell1TefN+5VLz+9rDrk62eIN1ds06t9V7DMXwCPXc8rw+TqzE4vqyoArEIB6KcAQLc6s9PL
+        qgoAq1AA+ikA0K3O7PSyqgLAKhSAfgoAdKszO72sqgCwCgWgnwIA3erMTi+rKgCsQgHopwBAtzqz08uq
+        CgCrUAD6KQDQrc7s9LKqAsAqFIB+CgB0qzM7vayqALAKBaCfAgDd6sxOL6sqAKxCAeinAEC3OrPTy6oK
+        AKtQAPopANCtzuz0sqoCwCoUgH4KAHSrMzu9rKoAsAoFoJ8CAN3qzE4vqyoArEIB6KcAQLc6s9PLqgoA
+        q1AA+ikA0K3O7PSyqgLAKhSAfgoAdKszO72sqgCwCgWgnwIA3erMTi+rKgCsQgHopwBAtzqz08uqCgCr
+        UAD6KQDQrc7s9LKqAsAqFIB+CgB0qzM7vayqALAKBaCfAgDd6sxOL6sqAKxCAeinAEC3OrPTy6oKAKtQ
+        APopANCtzuz0sqoCwCoUgH4KAHSrMzu9rKoAsAoFoJ8CAN3qzE4vqyoArEIB6KcAQLc6s9PLqgoAq1AA
+        +ikA0K3O7PSyqgLAKhSAfgoAdKszO72sqgCwCgWgnwIA3erMTi+rKgCsQgHopwBAtzqz08uqCgCrUAD6
+        KQDQrc7s9LKqAsAqFIB+CgB0qzM7vayqALAKBaCfAgDd6sxOL6sqAKxCAeinAEC3OrPTy6oKAKtQAPop
+        ANCtzuz0sqoCwCoUgH4KAHSrMzu9rKoAsAoFoJ8CAN3qzE4vqyoArEIB6KcAQLc6s9PLqgoAq1AA+ikA
+        0K3O7PSyqgLAKhSAfgoAdKszO72sqgCwCgWgnwIA3erMTi+rKgCsQgHopwAwpXtlvjHzsMx3Zb43cxyA
+        JabO7PSy6+4F4F2ZG2a4yTwyswoFoJ8CwLV7SOZHM6/MvC3zT5U5g+Vevy7Trl6eySWqlf4FRAHopwBw
+        5Y6/3T8j88bMRypfrkHu/8sz7erlmVyiUgAGqH1XoABwJe6ceXTm1ZnbKlOuWbL4+Uy7enkml6gUgAFq
+        3xUoAAx198wzM++vHJlIcrnlCKlbvTyTS1QKwAC17woUAIa4Z+YFmQ9Xfkwo+RzlrF29PJNLVArAALXv
+        ChQA2j02877KjYklp28/JdasXp7JJSoFYIDadwUKAG0emHlL5cUCktd9Tsk1q5dncolKARig9l2BAkCL
+        J2VuraxYQPL62Cm5AeoSTC5RKQAD1L4rUAD4stwj84rKiIUktz86JThAXYLJJSoFYIDadwUKAF+ymzLv
+        rnxYTLL76VOKA9QlmFyiUgAGqH1XoADwJTk+pveDlQ0LSn6POCU5QF2CySUqBWCA2ncFCgBftJszH6tc
+        WFDy+/fM3Y4wR6jLMLlEpQAMUPuuQAHgi3L84f9vlQmLSoZvOaU5SF2GySUqBWCA2ncFCgBfsAdn/qXy
+        YGHJ8SmnRAepyzC5RKUADFD7rkAB4AtyvOHvQ5UFC0uOt2aOn94Ypi7F5BKVAjBA7bsCBYDP6/jDwrv9
+        L0Sy/LVTqgPVpZhcolIABqh9V6AA8Hn5Of8LkjyP93EMVZdicolKARig9l2BAsD/6wfq/nMBkufvnmMd
+        qy7H5BKVAjBA7bsCBYDP6fhs/0/U/ecCJM9Hn5IdrC7H5BKVAjBA7bsCBYDPyS/2uSDJ80/OsY5Xl2Ry
+        iUoBGKD2XYECwA09vu47FyB5fiYz7JP//re6LJNLVArAALXvChQA/o/jXf/vr/vOBUierzole0Xqskwu
+        USkALCH5KwBX5CfqnnMBkufHM/c7JXtF6tJMLlEpACwh+SsAV+D42/+H655zAZLnM0/JXqG6NJNLVAoA
+        S0j+CsAVeHbdby5A8vyNc6xXqy7P5BKVAsASkr8CMNhdMn9f95vFJcv3Ze51BHvVagUml6gUAJaQ/BWA
+        wR5X95rFJctPZb7llOo1qDWYXKJSAFhC8lcABntD3WsWlhzvyDz5lOg1qVWYXKJSAFhC8lcABvqqzG11
+        r1lUMvxs5keOQK9TrcPkEpUCwBKSvwIw0DPqPrOw5HjLOc7rVeswuUSlALCE5K8ADPSmus8sKPkdf/N/
+        8SnJCdRaTC5RKQAsIfkrAAP9c91nFpPs/jPztFOKk6jVmFyiUgBYQvJXAAZ5SN1jFpPsbs087pTiRGo9
+        JpeoFACWkPwVgEGeU/eYhSS3P898/SnBydSKTC5RKQAsIfkrAIO8su4xC0hex//3/0rm7kd4M6pVmVyi
+        UgBYQvJXAAZ5W91jJpes/jbzmFNqE6t1mVyiUgBYQvJXAAbxBsDJJaPjk/1+LnP8sqbp1dpMLlEpACwh
+        +SsAAxyfFf/ZusdMJtncnnl55usyy6j1mVyiUgBYQvJXAAZ4cN1fJpJcPpk5/p//piOk1dSXweQSlQLA
+        EpK/AjDAQ+v+cs2SxWcy78g8O3PvzLLqS2JyiUoBYAnJXwEY4Dvr/nINcv9vy7w188LMAzMXob48Jpeo
+        FACWkPwVgAG+r+4vg+VeHx/a867M6zPHZ/Y/KnPXzMWpL5nJJSoFgCUkfwVggB+s+zu97PqLmeMQrDBP
+        yDw2c3PmmzL3z2yjIpteVj0K2Y3y22UemVmFArCx5H+cV5o9te7v9I5dzyszu4psell1pb8B704B2Fjy
+        9/wfQAGgXUU2vayqAKxDAdhY8vf8H0ABoF1FNr2sqgCsQwHYWPL3/B9AAaBdRTa9rKoArEMB2Fjy9/wf
+        QAGgXUU2vayqAKxDAdhY8vf8H0ABoF1FNr2sqgCsQwHYWPL3/B9AAaBdRTa9rKoArEMB2Fjy9/wfQAGg
+        XUU2vayqAKxDAdhY8vf8H0ABoF1FNr2sqgCsQwHYWPL3/B9AAaBdRTa9rKoArEMB2Fjy9/wfQAGgXUU2
+        vayqAKxDAdhY8vf8H0ABoF1FNr2sqgCsQwHYWPL3/B9AAaBdRTa9rKoArEMB2Fjy9/wfQAGgXUU2vayq
+        AKxDAdhY8vf8H0ABoF1FNr2sqgCsQwHYWPL3/B9AAaBdRTa9rKoArEMB2Fjy9/wfQAGgXUU2vayqAKxD
+        AdhY8vf8H0ABoF1FNr2sqgCsQwHYWPL3/B9AAaBdRTa9rKoArEMB2Fjy9/wfQAGgXUU2vayqAKxDAdhY
+        8vf8H0ABoF1FNr2sqgCsY5kCcOy6yLyzVp5edvX8H0ABoF1FNr2sejwEWcNKBWAVnv+bcwBoV5FNL6sq
+        AOtQAPp5/m/OAaBdRTa9rKoArEMB6Of5vzkHgHYV2fSyqgKwDgWgn+f/5hwA2lVk08uqCsA6FIB+nv+b
+        cwBoV5FNL6sqAOtQAPp5/m/OAaBdRTa9rKoArEMB6Of5vzkHgHYV2fSyqgKwDgWgn+f/5hwA2lVk08uq
+        CsA6FIB+nv+bcwBoV5FNL6sqAOtQAPp5/m/OAaBdRTa9rKoArEMB6Of5vzkHgHYV2fSyqgKwDgWgn+f/
+        5hwA2lVk08uqCsA6FIB+nv+bcwBoV5FNL6sqAOtQAPp5/m/OAaBdRTa9rKoArEMB6Of5vzkHgHYV2fSy
+        qgKwDgWgn+f/5hwA2lVk08uqCsA6FIB+nv+bcwBoV5FNL6sqAOtQAPp5/m/OAaBdRTa9rKoArEMB6Of5
+        vzkHgHYV2fSyqgKwDgWgn+f/5hwA2lVk08uqCsA6FIB+nv+bW+YA0C/5D/kDsF5+ellVAViHAtBPAdic
+        ArCx5K8AsAoFoJ8CsDkFYGPJXwFgFQpAPwVgcwrAxpK/AsAqFIB+CsDmFICNJX8FgFUoAP0UgM0pABtL
+        /goAq1AA+ikAm1MANpb8FQBWoQD0UwA2pwBsLPkrAKxCAeinAGxOAdhY8lcAWIUC0E8B2JwCsLHkrwCw
+        CgWgnwKwOQVgY8lfAWAVCkA/BWBzCsDGkr8CwCoUgH4KwOYUgI0lfwWAVSgA/RSAzSkAG0v+CgCrUAD6
+        KQCbUwA2lvwVAFahAPRTADanAGws+SsArEIB6KcAbE4B2FjyVwBYhQLQTwHYnAKwseSvALAKBaCfArA5
+        BWBjyV8BYBUKQD8FYHMKwMaSvwLAKhSAfgrA5hSAjSV/BYBVKAD9FIDNKQAbS/4KAKtQAPopAJtTADaW
+        /BUAVqEA9FMANqcAbCz5KwCsQgHopwBsTgHYWPJXAFiFAtBPAdicArCx5K8AsAoFoJ8CsDkFYGPJXwFg
+        FQpAPwVgcwrAxpK/AsAqFIB+CsDmFICNJX8FgFUoAP0UgM0pABtL/goAq1AA+ikAm1MANpb8FQBWoQD0
+        UwA2pwBsLPkrAKxCAeinAGxOAdhY8lcAWIUC0E8B2JwCsLHkrwCwCgWgnwKwOQVgY8lfAWAVCkA/BWBz
+        CsDGkr8CwCoUgH4KwOYUgI0lfwWAVSgA/RSAzSkAG0v+CgCrUAD6KQCbUwA2lvwVAFahAPRTADanAGws
+        +SsArEIB6KcAbE4B2FjyVwBYhQLQTwHYnAKwseSvALAKBaCfArC5R2SOh6DZc16YGeFG15pxRn399Duy
+        ulGGM84qVnr+H7sCAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAPu6053+B0oZkwbhtuGHAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
